# ts-playground

./: .gitignore  .mcp.json  CLAUDE.md  index.html  index.ts  output.txt  package.json  random.js  tsconfig.json
.claude/: settings.json
apps/agent-testing/: .env.example  package.json  tsconfig.json
apps/agent-testing/src/: agent.ts  index.ts
apps/agent-testing/src/tools/: calculator.ts  current-time.ts  index.ts  tavily-search.ts
apps/agent-testing/src/tui/: ChatUI.tsx  Input.tsx  Message.tsx  MessageList.tsx  ReasoningBlock.tsx  ThinkingIndicator.tsx  ToolIndicator.tsx
apps/docx-cli/: .gitignore  CLAUDE.md  PLAN.md  pyproject.toml
apps/docx-cli/docs/plans/: 2024-12-31-all-python-design.md
apps/docx-cli/src/docx_cli/: __init__.py  __main__.py  cli.py  styles.py
apps/docx-cli/src/docx_cli/commands/: __init__.py  export.py  info.py  list_projects.py  new.py  update.py
apps/docx-cli/src/docx_cli/core/: __init__.py  docx_parser.py  docx_writer.py  html_updater.py  project.py
apps/html-canvas/: package.json  server.ts  tsconfig.json
errors/: index.ts
jwt/: index.ts
openai-agent-builder/: text.txt
parsing-test/: index.ts
routing-tests/: main.ts  mercury.ts  mistral.ts  morph.ts  openai-oss-120b.ts  openai-oss-20b.ts
static-vs-dynamic-imports/: start.js
static-vs-dynamic-imports/src/: index.js  something.js
